2005-02-14  Joseph S. Myers  <jsm@polyomino.org.uk>

	* hack/hack.termcap.c: Remove "static" from some variables.  Fix
	from Andreas Jochens <aj@andaco.de> in Debian bug 284750.
	* exec.objs: Include lib/strlcpy.o for atc and sail.
	* atc/input.c, backgammon/backgammon/main.c,
	backgammon/teachgammon/teach.c, cribbage/instr.c, fish/fish.c,
	phantasia/misc.c, rogue/machdep.c, wump/wump.c: Cast last argument
	of execl to char *.
	* rogue/rogue.h: Avoid arrays of incomplete types.
	* trek/trek.h: Likewise.  Don't declare Skitab and Lentab here.
	* trek/getpar.h: Declare Skitab and Lentab here.
	* phantasia/phantstruct.h: Define phbool.
	* phantasia/gamesupport.c, phantasia/interplayer.c,
	phantasia/io.c, phantasia/misc.c: Use phbool where necessary.

	* .cvsignore, adventure/.cvsignore, arithmetic/.cvsignore,
	atc/.cvsignore, backgammon/backgammon/.cvsignore,
	backgammon/common_source/.cvsignore,
	backgammon/teachgammon/.cvsignore, banner/.cvsignore,
	battlestar/.cvsignore, bcd/.cvsignore, boggle/boggle/.cvsignore,
	boggle/mkdict/.cvsignore, boggle/mkindex/.cvsignore,
	caesar/.cvsignore, canfield/canfield/.cvsignore,
	canfield/cfscores/.cvsignore, cribbage/.cvsignore, dab/.cvsignore,
	dm/.cvsignore, factor/.cvsignore, fish/.cvsignore,
	fortune/datfiles/.cvsignore, fortune/fortune/.cvsignore,
	fortune/strfile/.cvsignore, fortune/unstr/.cvsignore,
	gomoku/.cvsignore, hack/.cvsignore, hangman/.cvsignore,
	hunt/hunt/.cvsignore, hunt/huntd/.cvsignore, include/.cvsignore,
	lib/.cvsignore, mille/.cvsignore, monop/.cvsignore,
	morse/.cvsignore, number/.cvsignore, phantasia/.cvsignore,
	pig/.cvsignore, pom/.cvsignore, ppt/.cvsignore, primes/.cvsignore,
	quiz/.cvsignore, quiz/datfiles/.cvsignore, rain/.cvsignore,
	random/.cvsignore, robots/.cvsignore, rogue/.cvsignore,
	sail/.cvsignore, snake/snake/.cvsignore, snake/snscore/.cvsignore,
	tetris/.cvsignore, trek/.cvsignore, worm/.cvsignore,
	worms/.cvsignore, wtf/.cvsignore, wump/.cvsignore: Remove as no