@@ -1,4 +1,4 @@
-/*	$NetBSD: io.c,v 1.8 2004/04/11 13:35:06 he Exp $	*/
+/*	$NetBSD: io.c,v 1.9 2005/02/15 12:58:21 jsm Exp $	*/
 
 /*
  * io.c - input/output routines for Phantasia
